ggtern 3.1.1
----------------------------------------------------------------

ggtern 3.1.0
----------------------------------------------------------------
* Fix citation information to reference the JSS article (https://doi.org/10.18637/jss.v087.c03)

ggtern 3.0.0
----------------------------------------------------------------
* Bug fixes and S3 methods, 
* Fixed broken compatability with ggplot2 3.0.0

ggtern 2.2.2
----------------------------------------------------------------
* Fixed bug to do with enabling arrows on theme_bw theme preset
* Added convenience function for changing major or minor ticklengths.
* Additional datasets
* Ternary version of hexbin
* Update the theme(..) function to now include valid arguments relative to the new theme elements
* New Geometry, geom_tri_tern and stat_tri_tern, which is like hexbin, but on triangular mesh

ggtern 2.2.1
----------------------------------------------------------------
* Modified the masked ggplot_gtable and ggplot_build functions, to call the parent versions if the plot is not ternary (ie the functions within the starndard ggplot2 plot), reducing the fragility of the ggtern package to changes in ggplot2
* Approved geom_encircle from the ggalt package as an approved geometry, as requested by David Zakharov.
* Fixed error warning excess aesthetic
* Fixed issue w/ theme, where element blank was being ignored.
* Mean Ellipses Geomery. Thanks to Ashton Drew from KDV Decision Analysis for requesting this.
* Fixed inheritence of ternary ticks (tern.axis.ticks), which previousl inherited from axis.line, when it really should inherit from axis.ticks.
* New Labelling Geometries, geom_text_viewport and geom_label_viewport, for positioning text and labels at fractional coordinates relative to the panel viewport.

ggtern 2.2.0
----------------------------------------------------------------
* Tidied up strip_unnaproved function
* Removed hidden functions no longer used