@@ -1,5 +1,6 @@
 ggtern 3.1.1
 ----------------------------------------------------------------
+* Bug fix within the stat density tern funtion
 
 ggtern 3.1.0
 ----------------------------------------------------------------
